Added World-bank Dataset

--- a/Linear-Regression/WB-Kenya-Population coverage-at least 3G/All-target-predictors-modeling.ipynb
+++ b/Linear-Regression/WB-Kenya-Population coverage-at least 3G/All-target-predictors-modeling.ipynb
@@ -19,7 +19,7 @@
     "# 1. LOAD 3G COVERAGE (ITU DATA)\n",
     "# ============================================\n",
     "\n",
-    "df_3g_raw = pd.read_csv(\"/Users/mwangangi/Documents/Data/ITU_DH_POP_COV_3G_WIDEF.csv\")\n",
+    "df_3g_raw = pd.read_csv(\"WB-Dataset/ITU_DH_POP_COV_3G_WIDEF.csv\")\n",
     "\n",
     "# Kenya-only\n",
     "df_3g_raw = df_3g_raw[df_3g_raw[\"REF_AREA_LABEL\"] == \"Kenya\"]\n",
@@ -78,10 +78,10 @@
     "\n",
     "years_available = df_3g[\"year\"].unique()\n",
     "\n",
-    "population = load_wdi_series(\"/Users/mwangangi/Documents/Data/World-bank/API_SP.POP.TOTL_DS2_en_csv_v2_69/API_SP.POP.TOTL_DS2_en_csv_v2_69.csv\", \"population_total\")\n",
+    "population = load_wdi_series(\"WB-Dataset/API_SP.POP.TOTL_DS2_en_csv_v2_69.csv\", \"population_total\")\n",
     "population = population[population[\"year\"].isin(years_available)]\n",
     "\n",
-    "mobile = load_wdi_series(\"/Users/mwangangi/Documents/Data/World-bank/API_IT.CEL.SETS.P2_DS2_en_csv_v2_3030/API_IT.CEL.SETS.P2_DS2_en_csv_v2_3030.csv\", \"mobile_subs_per_100\")\n",
+    "mobile = load_wdi_series(\"WB-Dataset/API_IT.CEL.SETS.P2_DS2_en_csv_v2_3030.csv\", \"mobile_subs_per_100\")\n",
     "mobile = mobile[mobile[\"year\"].isin(years_available)]\n",
     "\n",
     "# OPTIONAL FUTURE PREDICTORS:\n",
