Target-Predictor code formating

--- a/Linear-Regression/WB-Kenya-Population coverage-at least 3G/All-target-predictors-modeling.ipynb
+++ b/Linear-Regression/WB-Kenya-Population coverage-at least 3G/All-target-predictors-modeling.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-12-19T19:18:54.033171Z",
-     "start_time": "2025-12-19T19:18:52.837867Z"
+     "end_time": "2025-12-21T20:43:42.085129Z",
+     "start_time": "2025-12-21T20:43:40.545780Z"
     }
    },
    "source": [
@@ -15,13 +15,11 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "# ============================================\n",
-    "# 1. LOAD 3G COVERAGE (ITU DATA)\n",
-    "# ============================================\n",
+    "# Load 3G Coverage dataset\n",
     "\n",
     "df_3g_raw = pd.read_csv(\"WB-Dataset/ITU_DH_POP_COV_3G_WIDEF.csv\")\n",
     "\n",
-    "# Kenya-only\n",
+    "# Filter Kenya data\n",
     "df_3g_raw = df_3g_raw[df_3g_raw[\"REF_AREA_LABEL\"] == \"Kenya\"]\n",
     "\n",
     "# Extract year columns (your file uses year-only column names)\n",
@@ -31,24 +29,21 @@
     "df_3g = df_3g_raw[year_cols].transpose().reset_index()\n",
     "df_3g.columns = [\"variable\", \"coverage_3G\"]\n",
     "\n",
-    "# Extract year\n",
+    "# Extract year from var\n",
     "df_3g[\"year\"] = df_3g[\"variable\"].str.extract(r\"(\\d{4})\").astype(int)\n",
     "\n",
-    "# Final clean 3G dataset\n",
+    "# Final clean dataset\n",
     "df_3g = df_3g[[\"year\", \"coverage_3G\"]].sort_values(\"year\")\n",
     "df_3g = df_3g.dropna()\n",
     "\n",
-    "print(\"3G DATA:\")\n",
+    "print(\"World bank 3G Coverage Data:\")\n",
     "print(df_3g)\n",
     "print(df_3g.shape)\n",
     "\n",
+    "# Predictor Function for WorldBank Dataset.\n",
     "\n",
-    "# ============================================\n",
-    "# 2. HELPER FUNCTION FOR WDI FILES\n",
-    "# ============================================\n",
-    "\n",
-    "def load_wdi_series(path, value_name):\n",
-    "    df = pd.read_csv(path, skiprows=4)   # WDI CSVs always have 4 header rows\n",
+    "def load_wb_dataset(path, value_name):\n",
+    "    df = pd.read_csv(path, skiprows=4) \n",
     "\n",
     "    # Keep only Kenya\n",
     "    df = df[df[\"Country Name\"] == \"Kenya\"]\n",
@@ -71,21 +66,18 @@
     "\n",
     "    return df_long\n",
     "\n",
-    "\n",
-    "# ============================================\n",
-    "# 3. LOAD PREDICTORS (FILTER YEARS 2007–2024)\n",
-    "# ============================================\n",
+    "# Filter Predictors years (2007-2024)\n",
     "\n",
     "years_available = df_3g[\"year\"].unique()\n",
     "\n",
-    "population = load_wdi_series(\"WB-Dataset/API_SP.POP.TOTL_DS2_en_csv_v2_69.csv\", \"population_total\")\n",
+    "population = load_wb_dataset(\"WB-Dataset/API_SP.POP.TOTL_DS2_en_csv_v2_69.csv\", \"population_total\")\n",
     "population = population[population[\"year\"].isin(years_available)]\n",
     "\n",
-    "mobile = load_wdi_series(\"WB-Dataset/API_IT.CEL.SETS.P2_DS2_en_csv_v2_3030.csv\", \"mobile_subs_per_100\")\n",
+    "mobile = load_wb_dataset(\"WB-Dataset/API_IT.CEL.SETS.P2_DS2_en_csv_v2_3030.csv\", \"mobile_subs_per_100\")\n",
     "mobile = mobile[mobile[\"year\"].isin(years_available)]\n",
     "\n",
     "# OPTIONAL FUTURE PREDICTORS:\n",
-    "# internet = load_wdi_series(\"Data/API_IT.NET.USER.ZS_DS2_en_csv_v2_3030.csv\", \"internet_users_pct\")\n",
+    "# internet = load_wb_dataset(\"Data/API_IT.NET.USER.ZS_DS2_en_csv_v2_3030.csv\", \"internet_users_pct\")\n",
     "# internet = internet[internet[\"year\"].isin(years_available)]\n",
     "\n",
     "\n",
