--- a/Linear-Regression/WB-Kenya-Population coverage-at least 3G/All-target-predictors-modeling.ipynb
+++ b/Linear-Regression/WB-Kenya-Population coverage-at least 3G/All-target-predictors-modeling.ipynb
@@ -81,9 +81,9 @@
     "# internet = internet[internet[\"year\"].isin(years_available)]\n",
     "\n",
     "\n",
-    "# ============================================\n",
-    "# 4. SAFE MERGE — No duplicate years\n",
-    "# ============================================\n",
+    "\n",
+    "# MERGE and No duplicate years\n",
+    "\n",
     "\n",
     "# Merge one-to-one\n",
     "df_model = (\n",
@@ -98,11 +98,7 @@
     "print(df_model.shape)\n",
     "\n",
     "\n",
-    "# ============================================\n",
-    "# 5. VISUALIZATIONS\n",
-    "# ============================================\n",
-    "\n",
-    "# ---- (A) 3G Coverage Over Time ----\n",
+    "# Visualize 3G Coverage Over Time\n",
     "plt.figure(figsize=(10,4))\n",
     "plt.plot(df_model[\"year\"], df_model[\"coverage_3G\"], marker=\"o\")\n",
     "plt.title(\"Kenya — 3G Coverage Over Time\")\n",
@@ -111,7 +107,7 @@
     "plt.grid(True)\n",
     "plt.show()\n",
     "\n",
-    "# ---- (B) Predictor vs 3G scatter plots ----\n",
+    "# Predictor vs 3G scatter plots\n",
     "\n",
     "# Mobile Subscriptions\n",
     "plt.figure(figsize=(6,4))\n",
@@ -132,11 +128,10 @@
     "plt.show()\n",
     "\n",
     "\n",
-    "# ============================================\n",
-    "# 6. READY FOR REGRESSION\n",
-    "# ============================================\n",
+    "# READY FOR REGRESSION\n",
     "\n",
-    "print(\"\\nYour data is now clean and ready for regression modelling.\")\n",
+    "\n",
+    "print(\"\\nWB data is now clean and ready for regression modelling.\")\n",
     "\n",
     "\n",
     "# Model training for regression\n",
@@ -146,9 +141,8 @@
     "from sklearn.metrics import mean_squared_error, r2_score\n",
     "import numpy as np\n",
     "\n",
-    "# ---------------------------------------------------\n",
-    "# 1. CLEAN DATA FOR MODEL\n",
-    "# ---------------------------------------------------\n",
+    "# Clean the data for Modeling\n",
+    "\n",
     "df_reg = df_model.dropna()\n",
     "\n",
     "X = df_reg[['mobile_subs_per_100', 'population_total']]\n",
@@ -159,15 +153,14 @@
     "    X, y, test_size=0.25, random_state=42\n",
     ")\n",
     "\n",
-    "# ---------------------------------------------------\n",
-    "# 2. TRAIN MODEL\n",
-    "# ---------------------------------------------------\n",
+    "\n",
+    "# TRAIN MODEL\n",
+    "\n",
     "model = LinearRegression()\n",
     "model.fit(X_train, y_train)\n",
     "\n",
-    "# ---------------------------------------------------\n",
-    "# 3. EVALUATE MODEL\n",
-    "# ---------------------------------------------------\n",
+    "# Evaluate Model\n",
+    "\n",
     "y_pred = model.predict(X_test)\n",
     "\n",
     "print(\"R² Score:\", r2_score(y_test, y_pred))\n",
@@ -180,9 +173,8 @@
     "print(pd.Series(model.coef_, index=X.columns))\n",
     "print(\"Intercept:\", model.intercept_)\n",
     "\n",
-    "# ---------------------------------------------------\n",
-    "# 4. VISUALIZE PREDICTED VS ACTUAL\n",
-    "# ---------------------------------------------------\n",
+    "# VISUALIZE PREDICTED VS ACTUAL\n",
+    "\n",
     "plt.figure(figsize=(6, 4))\n",
     "plt.scatter(y_test, y_pred, color='blue')\n",
     "plt.plot([y_test.min(), y_test.max()],\n",
